@@ -61,7 +61,7 @@ public class AtlasConvert implements ActionListener {
 			atlasFormatList.setSelectedIndex(1);
 		int result = JOptionPane.showConfirmDialog(MainGUI.getMainGUI(), panel, "Convert atlas format",
 				JOptionPane.OK_CANCEL_OPTION);
-		if (result == JOptionPane.CANCEL_OPTION)
+		if (result != JOptionPane.OK_OPTION)
 			return;
 
 		AtlasOutputFormat format = (AtlasOutputFormat) atlasFormatList.getSelectedValue();
